@@ -1,3 +1,7 @@
+2009-01-11  Adam Nemet  <anemet@caviumnetworks.com>
+
+	* gcc.target/mips/ins-2.c: New test.
+
 2009-01-11  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR testsuite/38809
